# slither-lsp

./: README.md  pyproject.toml  setup.py
.github/workflows/: black.yaml  pip-audit.yaml  publish.yaml  pylint.yaml
slither_lsp/: __main__.py
slither_lsp/app/: app.py  app_hooks.py  slither_server.py  solidity_workspace.py
slither_lsp/app/feature_analyses/: slither_diagnostics.py
slither_lsp/app/logging/: __init__.py  lsp_handler.py
slither_lsp/app/request_handlers/: __init__.py  call_hierarchy.py  code_lens.py  goto_def_impl_refs.py  inlay_hints.py  registered_handlers.py  symbols.py  type_hierarchy.py  types.py
slither_lsp/app/request_handlers/analysis/: __init__.py  get_detector_list.py  get_version.py  set_detector_settings.py
slither_lsp/app/request_handlers/compilation/: __init__.py  autogenerate_standard_json.py  get_command_line_args.py  set_compilation_targets.py
slither_lsp/app/request_handlers/crytic_compile/: get_command_line_args.py
slither_lsp/app/request_handlers/slither/: analysis_create.py  analysis_delete.py  get_version.py  run_detectors.py
slither_lsp/app/requests/analysis/: report_analysis_progress.py
slither_lsp/app/types/: analysis_structures.py  compilation_structures.py  params.py
slither_lsp/app/utils/: file_paths.py  ranges.py
slither_lsp/command_handlers/: base_handler.py  registered_handlers.py
slither_lsp/command_handlers/crytic_compile/: autogenerate_standard_json.py  get_command_line_args.py
slither_lsp/command_handlers/lifecycle/: exit.py  initialize.py  initialize_handler.py  initialized.py  initialized_handler.py  set_trace.py  shutdown.py  shutdown_handler.py
slither_lsp/command_handlers/slither/: analysis_create.py  analysis_delete.py  analyze_handler.py  get_detector_list.py  get_detector_list_handler.py  get_version.py  run_detectors.py
slither_lsp/command_handlers/text_document/: find_references.py  go_to_declaration.py  goto_declaration.py  goto_definition.py  goto_implementation.py  goto_type_definition.py
slither_lsp/command_handlers/workspace/: did_change_workspace_folder.py
slither_lsp/commands/: base_command.py
slither_lsp/commands/text_document/: publish_diagnostics.py
slither_lsp/commands/window/: log_message.py  show_document.py  show_message.py
slither_lsp/commands/workspace/: get_workspace_folders.py
slither_lsp/errors/: lsp_error.py  lsp_errors.py
slither_lsp/io/: jsonrpc_io.py
slither_lsp/lsp/request_handlers/: base_handler.py  registered_handlers.py
slither_lsp/lsp/request_handlers/lifecycle/: exit.py  initialize.py  initialized.py  set_trace.py  shutdown.py
slither_lsp/lsp/request_handlers/text_document/: hover.py  (+10 more)
slither_lsp/lsp/requests/: base_request.py
slither_lsp/lsp/servers/: base_server.py  console_server.py  network_server.py
slither_lsp/lsp/state/: server_config.py  server_context.py  server_hooks.py
slither_lsp/lsp/types/: base_serializable_structure.py  basic_structures.py  capabilities.py  errors.py  event_handler.py  params.py  registration_options.py
slither_lsp/servers/: base_server.py  console_server.py  network_server.py
slither_lsp/state/: capabilities.py  server_context.py  server_hooks.py
slither_lsp/types/: base_serializable_structure.py  lsp_basic_structures.py  lsp_capabilities.py  lsp_params.py  server_enums.py  workspace_types.py
tests/: test_lsp_basic_structures.py  test_serializable_structure.py
(+15 files in other folders)
