[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slither-lsp"
description = "Language Server powered by the Slither static analyzer"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "slither-analyzer>=0.10.1",
    "semantic-version>=2.8.5",
    "pygls>=1.3.0"
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3"
]

[[project.authors]]
name = "Trail of Bits"

[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/crytic/slither-lsp"
Issues = "https://github.com/crytic/slither-lsp/issues"

[project.scripts]
slither-lsp = "slither_lsp.__main__:main"

# Pylint settings

[tool.pylint.messages_control]
max-line-length = 120

disable = """
import-outside-toplevel,
missing-module-docstring,
useless-return,
duplicate-code
"""