[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slither-lsp"
description = "Language Server powered by the Slither static analyzer"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "slither-analyzer>=0.10.2",
    "semantic-version>=2.10.0",
    "pygls>=1.3.0"
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
requires-python = ">=3.10"

[[project.authors]]
name = "Trail of Bits"
email = "opensource@trailofbits.com"

[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/crytic/slither-lsp"
Issues = "https://github.com/crytic/slither-lsp/issues"

[project.scripts]
slither-lsp = "slither_lsp.__main__:main"

# Pylint settings

[tool.pylint.messages_control]
max-line-length = 120

disable = """
import-outside-toplevel,
missing-module-docstring,
useless-return,
duplicate-code
"""